--- a/packages/documentation/src/components/ThemeColors/ThemeColors.css
+++ b/packages/documentation/src/components/ThemeColors/ThemeColors.css
@@ -16,15 +16,14 @@
 }
 
 .Theme__Colors .Copy__Icon {
-  visibility: hidden;
+  opacity: 0;
 }
 
 .Theme__Colors .Section:hover .Copy__Icon {
-  visibility: visible;
+  opacity: 1;
 }
 
 .Theme__Colors .Section .Color__Name {
-  margin-right: 1rem;
   overflow: hidden;
   white-space: nowrap;
 }
@@ -34,9 +33,6 @@
   display: block;
   height: 20px;
   width: 20px;
-
-  margin-left: 0.5rem;
-  margin-right: 1rem;
 }
 
 .Color__Preview img {
