fix(core): eventlist active/hover and visual test

--- a/packages/core/src/components/event-list-item/event-list-item.scss
+++ b/packages/core/src/components/event-list-item/event-list-item.scss
@@ -72,12 +72,17 @@ $height-single-line: 2.5rem;
     }
   }
 
-  &.selected:not(:active, .active) {
+  &.selected {
     .event-list-item-container {
       background-color: var(--theme-event-item--background--selected);
       border-color: var(--theme-event-item--border--selected);
     }
     :hover {
+      border-color: var(--theme-event-item--border--selected) !important;
+    }
+
+    :active {
+      background-color: var(--theme-event-item--background--selected);
       border-color: var(--theme-event-item--border--selected) !important;
     }
   }
