test(core/pagination): add unit and vrt tests

--- a/packages/core/src/components/pagination/pagination.scss
+++ b/packages/core/src/components/pagination/pagination.scss
@@ -28,7 +28,7 @@
   input {
     width: 4.125rem;
     text-align: center;
-    margin: 0 $tiny-space;
+    margin: 0 $small-space;
   }
 
   .page-buttons {
