--- a/packages/documentation/src/components/DocsTabs/DocsTabs.scss
+++ b/packages/documentation/src/components/DocsTabs/DocsTabs.scss
@@ -7,12 +7,39 @@
  * LICENSE file in the root directory of this source tree.
  */
 .Docs__Tabs {
-  .tab-items {
-    width: 100%;
-  }
+  display: flex;
+  position: relative;
 
-  ix-tab-item {
-    max-width: unset;
+  height: 44px;
+}
+
+.Doc_Tab {
+  display: flex;
+  position: relative;
+
+  justify-content: center;
+  align-items: center;
+
+  height: 100%;
+  width: 100%;
+
+  cursor: pointer;
+  background-color: var(--theme-color-component-1);
+
+  > svg {
+    width: 24px;
+    height: 24px;
+    fill: var(--theme-color-std-text);
+    margin-right: 0.25rem;
+  }
+}
+
+.Doc_Tab.active {
+  background-color: var(--theme-color-dynamic);
+  color: var(--theme-color-primary--contrast);
+
+  > svg {
+    fill: var(--theme-color-primary--contrast);
   }
 }
 
