fix(core): selected-hover & selected-active color

--- a/packages/core/src/components/menu-item/menu-item.scss
+++ b/packages/core/src/components/menu-item/menu-item.scss
@@ -14,6 +14,9 @@
 :host {
   position: relative;
   display: block;
+  cursor: pointer;
+  @include ghost-hover-pressed;
+
 
   .tab {
     display: flex;
@@ -22,12 +25,6 @@
     height: 3rem;
     z-index: 500;
     padding-left: 1.25rem;
-
-    &:not(.selected) {
-      cursor: pointer;
-
-      @include ghost-hover-pressed;
-    }
   }
 
   i.glyph {
@@ -135,7 +132,17 @@
 
     &.active,
     &.selected {
+
       .tab {
+        background-color: var(--theme-nav-item-secondary--background--selected);
+
+      }
+
+      &:hover {
+        background-color: var(--theme-nav-item-secondary--background--selected);
+      }
+
+      &:active {
         background-color: var(--theme-nav-item-secondary--background--selected);
       }
     }
