fix(core/dropdown): allow nested dropdown

--- a/packages/core/src/components/dropdown-button/dropdown-button.scss
+++ b/packages/core/src/components/dropdown-button/dropdown-button.scss
@@ -18,6 +18,10 @@
     pointer-events: none;
   }
 
+  .hide {
+    display: none;
+  }
+
   .dropdown-button {
     display: block;
     position: relative;
