--- a/packages/core/src/components/dropdown-item/dropdown-item.scss
+++ b/packages/core/src/components/dropdown-item/dropdown-item.scss
@@ -18,7 +18,7 @@
   &.icon-only {
     min-width: 0;
 
-    .dropdown-item > .glyph {
+    .dropdown-item>.glyph {
       margin-inline-end: 0;
     }
 
@@ -29,6 +29,11 @@
         border-color: #199fff;
       }
     }
+  }
+
+  :focus {
+    background-color: transparent;
+    color: var(--theme-menu-item--color);
   }
 
   .checkmark {
