--- a/packages/core/src/components/toast/styles/toast-container.scss
+++ b/packages/core/src/components/toast/styles/toast-container.scss
@@ -20,6 +20,11 @@
   position: fixed;
 }
 
+.toast-container--top-right {
+  right: 1rem;
+  top: 2rem;
+}
+
 .toast-container--bottom-right {
   right: 1rem;
   bottom: 2rem;
