--- a/packages/angular-test-app/src/app/app.component.html
+++ b/packages/angular-test-app/src/app/app.component.html
@@ -4,4 +4,5 @@ SPDX-FileCopyrightText: 2023 Siemens AG
 SPDX-License-Identifier: MIT
 -->
 
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<ix-chip closable (close)="close($any($event))">Test</ix-chip>
