docs(core/pagination): add vue examples and since tag

--- a/packages/core/src/components/index-button/index-button.scss
+++ b/packages/core/src/components/index-button/index-button.scss
@@ -17,8 +17,8 @@
     height: $x-large-space;
 
     &.selected {
-      background-color: var(--theme-btn-invisible-secondary--background--selected) !important;
-      color: var(--theme-btn-invisible-secondary--color--selected) !important;
+      background-color: var(--theme-btn-invisible-secondary--background--selected);
+      color: var(--theme-btn-invisible-secondary--color--selected);
     }
   }
 }
