--- a/packages/core/src/components/group/group.scss
+++ b/packages/core/src/components/group/group.scss
@@ -36,11 +36,21 @@
     @include hover {
       background-color: var(--theme-group-item--background--hover);
       border-color: var(--theme-group-item--border-color--hover);
+
+      &.selected {
+        border: var(--theme-primary-bdr-2);
+        background-color: var(--theme-group-item--background--selected);
+      }
     }
 
     @include active {
       background-color: var(--theme-group-item--background--active);
       border-color: var(--theme-group-item--border-color--active);
+
+      &.selected {
+        border: var(--theme-primary-bdr-2);
+        background-color: var(--theme-group-item--background--selected);
+      }
     }
 
     @include focus-visible {
