--- a/packages/core/src/components/tooltip/tooltip.scss
+++ b/packages/core/src/components/tooltip/tooltip.scss
@@ -1,13 +1,14 @@
 :host {
   display: inline-block;
-  position: absolute;
+  position: fixed;
   left: 0px;
   top: 0px;
+  z-index: var(--theme-z-index-tooltip);
 
   max-width: 18.25rem;
 
   opacity: 0;
-  visibility: collapse;
+  visibility: collapse !important;
   overflow-wrap: break-word;
 
   border-radius: 0.25rem;
@@ -28,10 +29,10 @@
 
 :host(.visible) {
   opacity: 1;
-  visibility: visible;
+  visibility: visible !important;
 }
 
-:host {
+:host(.visible) {
   .arrow,
   .arrow::before {
     position: absolute;
