feat(core/cards): add cards

--- a/packages/core/src/components/my-component/my-component.scss
+++ b/packages/core/src/components/my-component/my-component.scss
@@ -14,4 +14,11 @@
   position: relative;
   width: 100vw;
   height: 100vh;
+  padding: 1rem;
+
+  .list {
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+  }
 }
