fix(core/breadcrumb):  handle overflow (#452)
Co-authored-by: Lukas Maurer <lukas.maurer@siemens.com>

--- a/packages/core/src/components/breadcrumb/breadcrumb.scss
+++ b/packages/core/src/components/breadcrumb/breadcrumb.scss
@@ -119,8 +119,7 @@
 
     .crumb-text {
       @include ellipsis;
-      display: flex;
-      align-items: center;
+      display: block;
       min-width: 0;
       font-weight: $font-weight-bold;
 
