feat(core/blind): implement keyboard accessibility for blind component

--- a/packages/core/src/components/blind/blind.scss
+++ b/packages/core/src/components/blind/blind.scss
@@ -21,6 +21,10 @@
   border-radius: var(--theme-blind--border-radius);
   overflow: hidden;
 
+  :focus {
+    outline-color: var(--theme-color-focus-bdr);
+  }
+
   .blind-header {
     @include ellipsis;
 
