fix: selected style & actions

--- a/packages/core/src/components/group-item/group-item.scss
+++ b/packages/core/src/components/group-item/group-item.scss
@@ -21,9 +21,7 @@
   padding: $small-space $large-space $small-space 2.5rem;
   position: relative;
   margin-top: 0.0625rem;
-  border: 1px solid var(--theme-group-item--border-color);
   outline: none;
-
   background-color: var(--theme-group-item--background);
 
   &.last {
@@ -66,21 +64,28 @@
     @include hover {
       background-color: var(--theme-group-item--background--hover);
       border-color: var(--theme-group-item--border-color--hover);
+
+      &.selected {
+        background-color: var(--theme-group-item--background--selected);
+      }
     }
 
     @include active {
       background-color: var(--theme-group-item--background--active);
       border-color: var(--theme-group-item--border-color--active);
+
+      &.selected {
+        background-color: var(--theme-group-item--background--selected);
+      }
     }
   }
 
   &.selected {
     border-top-width: 0.062rem !important;
-    border-color: var(--theme-group-item--border-color--selected);
     background-color: var(--theme-group-item--background--selected);
 
     .group-entry-selection-indicator {
-      background-color: var(--theme-color-input--focus);
+      background-color: var(--theme-group-item-indicator--background--selected);
     }
   }
 
