fix(core): focus, hide icon and  deselect items

--- a/packages/core/src/components/group-item/group-item.scss
+++ b/packages/core/src/components/group-item/group-item.scss
@@ -90,6 +90,6 @@
   }
 
   @include focus-visible {
-    border-color: var(--focus--border-color) !important;
+    border: 1px solid var(--theme-color-focus-bdr) !important;
   }
 }
