--- a/packages/core/src/components/blind/blind.scss
+++ b/packages/core/src/components/blind/blind.scss
@@ -22,6 +22,7 @@
   overflow: hidden;
 
   .blind-header {
+    all: unset;
     @include ellipsis;
 
     display: flex;
@@ -31,7 +32,7 @@
     border: solid var(--theme-blind--border-thickness) transparent;
     border-radius: var(--theme-blind--border-radius)
       var(--theme-blind--border-radius) 0 0;
-    padding-right: $default-space;
+    padding-right: $small-space;
     transition: border-radius $default-time;
     cursor: pointer;
 
@@ -51,9 +52,12 @@
       display: flex;
       align-items: center;
       flex-grow: 1;
+      height: 100%;
 
       .blind-header-title-default {
+        @include ellipsis;
         @include text-l-title;
+        margin-inline-end: $small-space;
         flex-grow: 1;
       }
     }
@@ -79,7 +83,8 @@
     }
 
     @include focus-visible {
-      border-color: var(--theme-focus--border-color);
+      border-color: var(--theme-color-focus-bdr);
+      outline: none;
     }
 
     &.closed {
