--- a/packages/core/src/components/group/group.scss
+++ b/packages/core/src/components/group/group.scss
@@ -51,7 +51,8 @@
 
     @include focus-visible {
       border: 1px solid var(--theme-color-focus-bdr);
-      border-radius: 4px 4px 0px 0px;
+      border-radius: var(--theme-default-border-radius)
+        var(--theme-default-border-radius) 0px 0px;
       outline: none;
     }
 
@@ -135,7 +136,7 @@
   .btn-expand-header {
     margin: $small-space;
     margin-inline-end: $tiny-space;
-    min-width: 24px;
+    min-width: 1.5rem;
   }
 
   .group-content {
