fix(core/toggle): remove attribute selector for disable state

--- a/packages/core/src/components/toggle/toggle.scss
+++ b/packages/core/src/components/toggle/toggle.scss
@@ -201,8 +201,8 @@
     }
   }
 
-  &[disabled],
   &.disabled {
+    pointer-events: none;
     .slider {
       cursor: initial;
       opacity: 0.5;
