--- a/packages/core/src/components/card-accordion/card-accordion.scss
+++ b/packages/core/src/components/card-accordion/card-accordion.scss
@@ -29,7 +29,7 @@ $expand-content-height: 15rem;
 
     background-color: var(--theme-color-component-1);
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     @include ghost-hover-pressed();
 
     @include focus-visible {
@@ -38,17 +38,27 @@ $expand-content-height: 15rem;
     }
   }
 
+  .expand-action::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--ix-card-background);
+    z-index: -1;
+  }
+
   .expand-action:not(.show) {
     border-bottom-left-radius: var(--theme-default-border-radius);
     border-bottom-right-radius: var(--theme-default-border-radius);
   }
 
   .expand-icon {
+    margin-left: 0.5rem;
     transition: var(--theme-default-time) transform ease-in-out;
   }
 
   .expand-icon.show {
-    transform: rotate(180deg);
+    transform: rotate(90deg);
   }
 
   .expand-content {
@@ -61,6 +71,7 @@ $expand-content-height: 15rem;
     width: 100%;
     height: 0;
     max-height: 20rem;
+    background-color: var(--theme-color-component-1);
   }
 
   .expand-content.show {
