--- a/packages/core/src/components/card/card.scss
+++ b/packages/core/src/components/card/card.scss
@@ -9,8 +9,28 @@
 
 $paddingContentLeftRight: 1rem;
 
-:host {
+:host(.card-insight) {
+  --ix-card-background: transparent;
+  border: var(--theme-soft-bdr-1);
+}
+
+:host(.card-notification) {
   --ix-card-background: var(--theme-color-component-1);
+}
+
+:host(.card-alarm) {
+  --ix-card-background: var(--theme-color-alarm);
+  color: var(--theme-color-alarm--contrast);
+}
+
+:host(.card-critical) {
+  --ix-card-background: var(--theme-color-critical);
+  color: var(--theme-color-critical--contrast);
+}
+
+:host(.card-warning) {
+  --ix-card-background: var(--theme-color-warning);
+  color: var(--theme-color-warning--contrast);
 }
 
 :host {
@@ -19,25 +39,26 @@ $paddingContentLeftRight: 1rem;
   flex-direction: column;
   align-items: flex-start;
   align-self: flex-start;
-  gap: 0.5rem;
 
+  width: 20rem;
   min-width: 20rem;
-  max-width: 20rem;
 
-  background-color: var(--ix-card-background);
   border-radius: var(--theme-default-border-radius);
 
   .card-content {
+    display: block;
     position: relative;
+    flex-shrink: 0;
+    flex-grow: 1;
     width: calc(100% - #{$paddingContentLeftRight * 2});
     padding: 0.5rem $paddingContentLeftRight;
+    min-height: 13.375rem;
+    background-color: var(--ix-card-background);
   }
 
   .card-footer {
     display: flex;
     position: relative;
-    margin-top: auto;
-    margin-bottom: 0px;
     width: 100%;
   }
 }
