fix(core/datetime-picker): adjust done button placement

--- a/packages/core/src/components/date-picker/date-picker.scss
+++ b/packages/core/src/components/date-picker/date-picker.scss
@@ -10,6 +10,10 @@
 @import 'common-variables';
 
 :host {
+  ix-date-time-card {
+    display: inline-block;
+  }
+
   .header {
     display: flex;
     align-items: center;
