--- a/packages/core/src/components/workflow-step/workflow-step.scss
+++ b/packages/core/src/components/workflow-step/workflow-step.scss
@@ -7,10 +7,6 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-/*
- * COPYRIGHT (c) Siemens AG 2018-2022 ALL RIGHTS RESERVED.
- */
-
 @import 'common-variables';
 
 :host {
@@ -119,6 +115,10 @@
 
           &.last {
             margin: 0 0 auto 0;
+          }
+
+          &.single {
+            width: 0;
           }
         }
       }
