--- a/packages/core/scss/components/_forms.scss
+++ b/packages/core/scss/components/_forms.scss
@@ -78,6 +78,11 @@
   box-shadow: none !important;
   outline: none !important;
   border-color: var(--theme-input--border-color);
+  cursor: default !important;
+
+  &::placeholder {
+    color: transparent;
+  }
 }
 
 .form-control:disabled,
